--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="aaa">
     <div id="calculator">
-        <div id="screen">a</div>
+        <div id="screen">
+            <p>1234567890</p>
+        </div>
         <div id="clear-delete">
             <button id="clear">Clear</button>
             <button id="delete">Delete</button>
