--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
             <button class="numpad">7</button>
             <button class="numpad">8</button>
             <button class="numpad">9</button>
-            <button class="operator" class="numpad">÷</button>
+            <button class="operator">÷</button>
 
             <button class="numpad">4</button>
             <button class="numpad">5</button>
             <button class="numpad">6</button>
-            <button class="operator" class="numpad">×</button>
+            <button class="operator">×</button>
 
             <button class="numpad">1</button>
             <button class="numpad">2</button>
             <button class="numpad">3</button>
-            <button class="operator" class="numpad">-</button>
+            <button class="operator">-</button>
 
             <button class="numpad">.</button>
             <button class="numpad">0</button>
-            <button id="btn-equals" class="numpad">=</button>
-            <button class="operator" class="numpad">+</button>
+            <button id="btn-equals">=</button>
+            <button class="operator">+</button>
         </div>  
     </div>
     <div id="linkGithub">
