p to div id="display"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="aaa">
     <div id="calculator">
         <div id="screen">
-            <p>1234567890</p>
+            <div id="display"></div>
         </div>
         <div id="clear-delete">
             <button id="clear">Clear</button>
