default display value changed from null to 0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="aaa">
     <div id="calculator">
         <div id="screen">
-            <div id="display"></div>
+            <div id="display">0</div>
         </div>
         <div id="clear-delete">
             <button id="clear">Clear</button>
