prevented input of multiple dots in one operand

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="numpad">3</button>
             <button class="operator">-</button>
 
-            <button class="numpad">.</button>
+            <button id="dot" class="numpad">.</button>
             <button class="numpad">0</button>
             <button id="btn-equals">=</button>
             <button class="operator">+</button>
