--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>  
     </div>
     <div id="linkGithub">
+        <img src="images/GitHub-Mark-32px.png">
         <a href="https://github.com/umtince/calculator-js">Mehmet Umut İNCEER</a>
     </div>
 </div>
